<resources>
    <string name="app_name">Gasto de viagem</string>
    <string name="name">Clique no botão</string>
    <string name="entrar">SORT</string>
    <string name="dist_ncia">Distância</string>
    <string name="total_de_gasolina">Total de km</string>
    <string name="pre_o">Preço</string>
    <string name="pre_o_por_litro">Preço por litro</string>
    <string name="seu_gasto_total">Seu gasto total será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="valortotalRS">R$ 0</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="preencha_todos_campos">Certifique-se de preencher todos os campos</string>
    <string name="informe_dados_validos">Por favor, informe valor válidos!</string>
    <string name="possuo_cupom_de_desconto">Possuo cupom de desconto</string>
</resources>
