<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!--
    match_parent: Diz para o elemento ocupar o tamanho do elemento pai, neste caso o Edit
    Text ocupa o tamanho do linearLayout.

    wrap_content:Diz para o elemento ocupar o tamanho necessário de acordo com seu size.

    layout gravity: Alinha o elemento de acordo com o elemento pai.

    Colocando o padding no Linear Layout, este aplica-se a todos os elementos filhos.

    Quando usa-se texto, utiliza-se o parametro "sp" ao invés de dp
    -->

    <EditText
        android:id="@+id/editDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/dist_ncia"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/total_de_gasolina"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/pre_o"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pre_o_por_litro"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editAutonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kms_por_litro"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/seu_gasto_total"
        android:textSize="20sp"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/editResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/valortotalRS"
        android:textSize="40sp"
        android:textColor="@color/darkBlue"
        />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/calcular"
        android:layout_marginTop="16dp"
        android:background="@color/lightGreen"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>